--- a/MongoDB/practice-express/.env
+++ b/MongoDB/practice-express/.env
@@ -1,1 +1,3 @@
-PORT = 5000
+NODE_ENV = development
+PORT = 6000
+MONGODB_URI = mongodb+srv://nextLevel:f3N6IYsh6pLAinnW@cluster0.pm1hwnw.mongodb.net/movie-collection?retryWrites=true&w=majority&appName=Cluster0
