--- a/Assignments/assignment-2/package.json
+++ b/Assignments/assignment-2/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "assignment-2",
-  "version": "1.0.0",
+  "name": "apollo-assignment-2",
+  "author": "Mahamudul Hasan",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "start": "node ./dist/server.js",
     "prod": "node ./dist/server.js",
     "lint": "npx eslint .",
+    "build": "tsc",
     "lint:fix": "npx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "eslint": "^8.57.0",
