--- a/Redux/ReduxRelay/package.json
+++ b/Redux/ReduxRelay/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "gravatar": "^1.8.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
