--- a/Redux/university-management-system-client/package.json
+++ b/Redux/university-management-system-client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.1",
     "jwt-decode": "^4.0.0",
@@ -20,7 +21,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
