--- a/Assignments/assignment-6/travel-tales/package.json
+++ b/Assignments/assignment-6/travel-tales/package.json
@@ -21,6 +21,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-quilljs": "^2.0.4",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
