--- a/Assignments/assignment-6/travel-tales/package.json
+++ b/Assignments/assignment-6/travel-tales/package.json
@@ -16,14 +16,18 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-quilljs": "^2.0.4",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.2",
