--- a/Assignments/assignment-6/travel-tales/package.json
+++ b/Assignments/assignment-6/travel-tales/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.9.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
+    "moment": "^2.30.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
