--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quilljs": "^2.0.4",
     "react-use-measure": "^2.1.1",
     "sonner": "^1.5.0",
