--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-quilljs": "^2.0.4",
     "react-use-measure": "^2.1.1",
+    "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
