--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_BASE_API = https://travel-tales-server.vercel.app/api
+# NEXT_PUBLIC_BASE_API = https://travel-tales-server.vercel.app/api
+NEXT_PUBLIC_BASE_API = http://localhost:1440/api
+
 NEXT_PUBLIC_IMAGEBB_API_KEY = aa895dd7b999be0a21308ce4c498be34
