--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-table": "^8.20.5",
     "@vercel/analytics": "^1.3.2",
@@ -38,8 +39,10 @@
     "react-hook-form": "^7.53.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-quilljs": "^2.0.4",
+    "react-redux": "^9.2.0",
     "react-use-measure": "^2.1.1",
     "recharts": "^2.13.0",
+    "redux": "^5.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
